kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.perry.cafe/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames: ["flux-operator.perryhuynh.com"]
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
